--- a/WorkingFrameWork/Resource/Station_Cr_2_Humid.plist
+++ b/WorkingFrameWork/Resource/Station_Cr_2_Humid.plist
@@ -6,7 +6,7 @@
 	<array>
 		<dict>
 			<key>TestName</key>
-			<string>A-B</string>
+			<string>H100_BC_A-B</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -103,7 +103,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>A-C</string>
+			<string>H101_BC_A-C</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -200,7 +200,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B-C</string>
+			<string>H102_BC_B-C</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -297,7 +297,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>D-E</string>
+			<string>H103_BC_D-E</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -394,7 +394,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>D-F</string>
+			<string>H104_BC_D-F</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -491,7 +491,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>E-F</string>
+			<string>H105_BC_E-F</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -782,7 +782,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>C-B2</string>
+			<string>H106_BC_C-B2</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -879,7 +879,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>D-E2</string>
+			<string>H107_BC_D-E2</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1533,7 +1533,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_ACR_1000</string>
+			<string>H200_BC_B4_E4_ACR_1000_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1630,7 +1630,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_ACR_1000_Cfix</string>
+			<string>H201_BC_B4_E4_ACR_1000_Cfix_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1654,7 +1654,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_ACR_1000_Cdut</string>
+			<string>H202_BC_B4_E4_ACR_1000_Cdut_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1678,7 +1678,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_ACR_1000_Rdut</string>
+			<string>H108_BC_ISOLATION_Z_AC</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1847,7 +1847,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_DCR</string>
+			<string>H203_BC_B4_E4_DCR_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1944,7 +1944,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_DCR_Rfix</string>
+			<string>H204_BC_B4_E4_DCR_Rfix_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1968,7 +1968,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>B4_E4_DCR_Rdut</string>
+			<string>H109_BC_ISOLATION_R_DC</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -1992,7 +1992,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>TEMP</string>
+			<string>H205_TEMP_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
@@ -2033,7 +2033,7 @@
 		</dict>
 		<dict>
 			<key>TestName</key>
-			<string>HUMID</string>
+			<string>H206_HUMID_X</string>
 			<key>RetryTimes</key>
 			<integer>2</integer>
 			<key>Units</key>
