1.变更版本号为V2.1.7版本 2.null时候增加温湿度

--- a/WorkingFrameWork/Resource/Station_Cr_3_Humid.plist
+++ b/WorkingFrameWork/Resource/Station_Cr_3_Humid.plist
@@ -1710,6 +1710,112 @@
 			<key>AllNeedCommands</key>
 			<array/>
 		</dict>
+		<dict>
+			<key>TestName</key>
+			<string>H205_TEMP_X</string>
+			<key>RetryTimes</key>
+			<integer>2</integer>
+			<key>Units</key>
+			<string>degree</string>
+			<key>Min</key>
+			<string>20</string>
+			<key>Max</key>
+			<string>30</string>
+			<key>Value1</key>
+			<string>--</string>
+			<key>Value2</key>
+			<string>--</string>
+			<key>Value3</key>
+			<string>--</string>
+			<key>Value4</key>
+			<string>--</string>
+			<key>Result1</key>
+			<string>--</string>
+			<key>Result2</key>
+			<string>--</string>
+			<key>Result3</key>
+			<string>--</string>
+			<key>Result4</key>
+			<string>--</string>
+			<key>IsTest</key>
+			<true/>
+			<key>IsShow</key>
+			<true/>
+			<key>AllNeedCommands</key>
+			<array>
+				<dict>
+					<key>TestName</key>
+					<string>--</string>
+					<key>TestDevice</key>
+					<string>TempHimu</string>
+					<key>TestCommand</key>
+					<string>READ</string>
+					<key>TestDelayTime</key>
+					<string>--</string>
+					<key>TestResultIsDigital</key>
+					<false/>
+					<key>TestResultDisplay</key>
+					<false/>
+					<key>TestBackValueSign</key>
+					<string></string>
+					<key>TestBackValueRegex</key>
+					<string>OK</string>
+				</dict>
+			</array>
+		</dict>
+		<dict>
+			<key>TestName</key>
+			<string>H206_HUMID_X</string>
+			<key>RetryTimes</key>
+			<integer>2</integer>
+			<key>Units</key>
+			<string>percent</string>
+			<key>Min</key>
+			<string>--</string>
+			<key>Max</key>
+			<string>50</string>
+			<key>Value1</key>
+			<string>--</string>
+			<key>Value2</key>
+			<string>--</string>
+			<key>Value3</key>
+			<string>--</string>
+			<key>Value4</key>
+			<string>--</string>
+			<key>Result1</key>
+			<string>--</string>
+			<key>Result2</key>
+			<string>--</string>
+			<key>Result3</key>
+			<string>--</string>
+			<key>Result4</key>
+			<string>--</string>
+			<key>IsTest</key>
+			<true/>
+			<key>IsShow</key>
+			<true/>
+			<key>AllNeedCommands</key>
+			<array>
+				<dict>
+					<key>TestName</key>
+					<string>--</string>
+					<key>TestDevice</key>
+					<string>HIMU</string>
+					<key>TestCommand</key>
+					<string>--</string>
+					<key>TestDelayTime</key>
+					<string>--</string>
+					<key>TestResultIsDigital</key>
+					<false/>
+					<key>TestResultDisplay</key>
+					<false/>
+					<key>TestBackValueSign</key>
+					<string></string>
+					<key>TestBackValueRegex</key>
+					<string>OK</string>
+				</dict>
+			</array>
+		</dict>
 	</array>
 	<key>backup </key>
 	<array>
